# majom

./: .gitignore  README.md
doc/: milestones
plans/: vision plan.txt
report/: Layout.uxf  interim.lyx  report.lyx  title.tex
src/: main.hs  majom.cabal
src/Arduino/majom/: majom.ino
src/Haskell/: main.hs  majom.cabal
src/Haskell/Majom/: Common.hs
src/Haskell/Majom/Analysis/: AdLib.hs  Kalman.hs  LeastSquares.hs  Model.hs  RecursiveLS.hs
src/Haskell/Majom/Comm/: Serial.hs
src/Haskell/Majom/Control/: Comm.hs  Flyable.hs  GUI.hs  Monkey.hs  MonocleMonkey.hs  PID.hs  Watcher.hs
src/Haskell/Majom/Control/Monkey/: HoverIntent.hs  Intent.hs  LandIntent.hs  MultiIntent.hs  SimpleHoverIntent.hs
src/Haskell/Majom/Flyers/: Flyable.hs  Helicopter.hs  VirtualHelicopter.hs
src/Haskell/Majom/Flyers/Special/: DuoCopter.hs
src/Haskell/Majom/Lang/: LoopWhile.hs
src/Haskell/Majom/Simulation/: SimplePhysics.hs  SimpleSim.hs
src/Haskell/Majom/Vision/: Simple.hs  Vision.hs  Vision_Client.hs  Vision_Consts.hs  Vision_Iface.hs  Vision_Types.hs
src/Haskell/testsuite/: test_main.hs
src/Majom/Graphics/: Draw.hs
src/Majom/Vision/: Simple.hs
src/Python/: analysis.py  detect.py  kalman.py  orient.py  present.py  presentSide.py  presentTop.py  surfHTTPServer.py  surface.py  visionHTTPServer.py  visionServer.py
src/Python/positionRecordings/: recParse.py  rec_out_hover_1.txt  rec_out_hover_1.txt_clean.csv  rec_out_hover_2.txt  rec_out_hover_2.txt_clean.csv  rec_out_hover_3.txt  rec_out_hover_3.txt_clean.csv  rec_out_landing1.txt  rec_out_landing1.txt_clean.csv  rec_out_landing2.txt  rec_out_landing2.txt_clean.csv  rec_out_orient_1.txt  rec_out_orient_1.txt_clean.csv  rec_out_orient_2.txt  rec_out_orient_2.txt_clean.csv  rec_out_orient_3.txt  rec_out_orient_3.txt_clean.csv  rec_out_range_1.txt  rec_out_range_1.txt_clean.csv  rec_out_range_2.txt  rec_out_range_2.txt_clean.csv  rec_out_range_3.txt  rec_out_range_3.txt_clean.csv
src/Python/vision/: Position-remote  Vision-remote  Vision.py  __init__.py  ttypes.py
src/Thrift/: vision.thrift  vision_build
