Name:           majom
Version:        0.2
Description:    Haskell helicopter flying
License:        GPL-3
License-file:   LICENSE
Author:         Luke Tomlin
Maintainer:     luke.tomlin@gmail.com
Build-Type:     Simple
Cabal-Version:  >=1.2
extra-source-files:
    Majom/Vision/Vision_Client.hs
    Majom/Vision/Vision.hs
    Majom/Vision/Vision_Types.hs


Library
  Exposed-modules:
    Majom.Analysis.Kalman,
    Majom.Analysis.LeastSquares,
    Majom.Analysis.Model,
    Majom.Common,
    Majom.Control.GUI,
    Majom.Control.Monkey,
    Majom.Control.Monkey.Intent,
    Majom.Control.Monkey.HoverIntent,
    Majom.Flyers.Flyable,
    Majom.Flyers.Helicopter,
    Majom.Flyers.VirtualHelicopter,
    Majom.Flyers.Special.DuoCopter,
    Majom.Lang.LoopWhile,
    Majom.Simulation.SimpleSim

 
  Extensions:
  Ghc-options: -O -threaded
-- -prof -fprof-auto

Executable majom
  Main-is:      main.hs
  Build-depends:
    base >= 4,
    gd,
    array,
    process,
    bytestring,
    serialport,
    gtk,
    transformers,
    containers,
    stm,
    hmatrix,
    mtl, 
    vector,
    time,
    loop-while,
    thrift,
    text,
    hashable,
    network,
    unordered-containers

  Extensions:
  Ghc-options: -O -threaded
-- -prof -fprof-auto
