Name:           majom
Version:        1.0
Description:    Haskell helicopter flying
License:        GPL-3
License-file:   LICENSE
Author:         Luke Tomlin
Maintainer:     luke.tomlin@gmail.com
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Exposed-modules:
    Majom.Common,
    Majom.Control.GUI,
    Majom.Control.Monkey,
    Majom.Control.Monkey.Intent,
    Majom.Control.Monkey.HoverIntent,
    Majom.Control.Monkey.LandIntent,
    Majom.Control.Monkey.MultiIntent,
    Majom.Control.PID,
    Majom.Control.Watcher,
    Majom.Flyers.Flyable,
    Majom.Flyers.Helicopter,
    Majom.Flyers.VirtualHelicopter,
    Majom.Flyers.Special.DuoCopter,
    Majom.Lang.LoopWhile,
    Majom.Simulation.SimpleSim
 
  Extensions:
  Ghc-options: -O -threaded
-- -prof -fprof-auto

Executable majom
  Main-is:      main.hs
  Build-depends:
    base >= 4,
    gd,
    array,
    process,
    bytestring,
    serialport,
    gtk,
    transformers,
    containers,
    stm,
    hmatrix,
    mtl, 
    vector,
    time,
    loop-while,
    text,
    hashable,
    network,
    regex-posix,
    random,
    HTTP,
    unordered-containers
  --  lens

  Extensions:
  Ghc-options: -O -threaded
-- -prof -fprof-auto
